--- a/eundong.html
+++ b/eundong.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <a href="https://www.instagram.com/j__eundong/">
-        <img src="./imges/조은동.png" style="width:500px;height: 500px;">
+        <img src="./조은동.jpg.html" style="width:500px;height: 500px;">
     </a>
       
     
